--- a/css/animations.css
+++ b/css/animations.css
@@ -733,7 +733,7 @@
    ======================================== */
 
 #revelation-trilogie {
-    background: #ffffff;
+    background: #fef5e7;
     padding: 3rem 0;
 }
 
